--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,7 +27,6 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'com.android.support:appcompat-v7:28.0.0-rc01'
     implementation 'com.android.support.constraint:constraint-layout:1.1.2'
-    implementation 'com.google.firebase:firebase-auth:11.6.0'
     implementation 'com.android.support:support-vector-drawable:28.0.0-rc01'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
@@ -45,6 +44,7 @@ dependencies {
     //Firestore
     def firebaseVersion = "11.6.0"
     implementation "com.google.firebase:firebase-firestore:$firebaseVersion"
+    implementation "com.google.firebase:firebase-auth:$firebaseVersion"
 
     //Picasso
     implementation 'com.squareup.picasso:picasso:2.71828'
@@ -52,6 +52,12 @@ dependencies {
     //Recycler view
     implementation 'com.android.support:recyclerview-v7:28.0.0-rc01'
 
+    //QR generator
+    implementation 'com.google.zxing:core:3.2.1'
+
+    //QR reader
+    implementation "com.google.android.gms:play-services-vision:$firebaseVersion"
+    implementation "com.google.android.gms:play-services-vision:$firebaseVersion"
 
 }
 
