--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,7 +7,7 @@ android {
     compileSdkVersion 28
     defaultConfig {
         applicationId "com.ramup.gandrade.pokerclub"
-        minSdkVersion 19
+        minSdkVersion 16
         targetSdkVersion 28
         versionCode 1
         versionName "1.0"
@@ -56,9 +56,7 @@ dependencies {
     implementation 'com.google.zxing:core:3.2.1'
 
     //QR reader
-    implementation "com.google.android.gms:play-services-vision:$firebaseVersion"
-    implementation "com.google.android.gms:play-services-vision:$firebaseVersion"
-
+    implementation 'me.dm7.barcodescanner:zxing:1.9'
 }
 
 apply plugin: 'com.google.gms.google-services'
