--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,6 +58,9 @@ dependencies {
 
     //QR reader
     implementation 'me.dm7.barcodescanner:zxing:1.9'
+
+    //Retrofit ( HTTP)
+    implementation 'com.squareup.retrofit2:retrofit:2.4.0'
 }
 
 apply plugin: 'com.google.gms.google-services'
