--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.application'
+apply plugin: 'io.fabric'
 apply plugin: 'kotlin-kapt'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
@@ -7,7 +8,7 @@ android {
     compileSdkVersion 28
     defaultConfig {
         applicationId "com.ramup.gandrade.pokerclub"
-        minSdkVersion 16
+        minSdkVersion 19
         targetSdkVersion 28
         versionCode 1
         versionName "1.0"
@@ -48,6 +49,9 @@ dependencies {
     implementation "com.google.firebase:firebase-firestore:$firebaseVersion"
     implementation "com.google.firebase:firebase-auth:$firebaseVersion"
     implementation "com.google.firebase:firebase-messaging:$firebaseVersion"
+    implementation "com.google.firebase:firebase-core:$firebaseVersion"
+    implementation "com.google.firebase:firebase-storage:$firebaseVersion"
+    implementation 'com.crashlytics.sdk.android:crashlytics:2.9.5'
 
     //Picasso
     implementation 'com.squareup.picasso:picasso:2.71828'
@@ -64,7 +68,6 @@ dependencies {
     // Networking
     def retrofit_version = '2.2.0'
     def okhttp_version = '3.8.1'
-
     implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
     implementation "com.squareup.retrofit2:converter-gson:$retrofit_version"
     implementation "com.squareup.retrofit2:adapter-rxjava2:$retrofit_version"
@@ -79,6 +82,8 @@ dependencies {
 
     //Multidex
     implementation 'com.android.support:multidex:1.0.3'
+
+
 }
 
 apply plugin: 'com.google.gms.google-services'
