--- a/build.gradle
+++ b/build.gradle
@@ -6,6 +6,8 @@ buildscript {
         mavenCentral()
         google()
         jcenter()
+        maven { url 'https://maven.fabric.io/public' }
+
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.1.4'
@@ -14,6 +16,8 @@ buildscript {
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
         classpath 'com.google.gms:google-services:3.1.1'
+        classpath 'io.fabric.tools:gradle:1.25.4'
+
     }
 }
 
@@ -22,6 +26,8 @@ allprojects {
         google()
         jcenter()
         maven { url "https://jitpack.io" }
+        maven { url 'https://maven.google.com/' }
+
     }
 }
 
