--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,21 +25,26 @@ android {
 }
 
 dependencies {
+    def android_version = "28.0.0-alpha1"
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation 'com.android.support:appcompat-v7:28.0.0-rc01'
+
+    implementation "com.android.support:appcompat-v7:$android_version"
     implementation 'com.android.support.constraint:constraint-layout:1.1.2'
-    implementation 'com.android.support:support-vector-drawable:28.0.0-rc01'
+    implementation "com.android.support:support-vector-drawable:$android_version"
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+
+    //Recycler view
+    implementation "com.android.support:recyclerview-v7:$android_version"
 
     //Koin
     implementation "org.koin:koin-android-architecture:0.9.3"
     implementation "org.koin:koin-core:0.9.3"
 
     //Snackbar
-    implementation 'com.android.support:design:28.0.0-rc01'
+    implementation "com.android.support:design:$android_version"
 
     //Anko
     implementation "org.jetbrains.anko:anko:0.10.5"
@@ -55,9 +60,6 @@ dependencies {
 
     //Picasso
     implementation 'com.squareup.picasso:picasso:2.71828'
-
-    //Recycler view
-    implementation 'com.android.support:recyclerview-v7:28.0.0-rc01'
 
     //QR generator
     implementation 'com.google.zxing:core:3.2.1'
