--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,7 +27,9 @@ android {
 dependencies {
     def android_version = "28.0.0-alpha1"
     implementation fileTree(dir: 'libs', include: ['*.jar'])
+
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
 
     implementation "com.android.support:appcompat-v7:$android_version"
     implementation 'com.android.support.constraint:constraint-layout:1.1.2'
