Working app signed with proguard enabled!

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,13 +11,19 @@ android {
         minSdkVersion 19
         targetSdkVersion 28
         versionCode 1
-        versionName "6.0"
+        versionName "7.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
         vectorDrawables.useSupportLibrary = true
         multiDexEnabled true
     }
     buildTypes {
         release {
+            minifyEnabled true
+            debuggable false
+            shrinkResources true
+            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+        }
+        debug {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
