--- a/app/build.gradle
+++ b/app/build.gradle
@@ -100,9 +100,10 @@ dependencies {
     //Roboelectric
     testImplementation 'org.robolectric:robolectric:4.0-alpha-3'
     testImplementation 'org.robolectric:shadows-playservices:4.0-alpha-3'
+
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
-
-
+    androidTestImplementation 'com.android.support.test:runner:1.0.2'
+    androidTestImplementation 'com.android.support.test:rules:1.0.2'
 }
 
 apply plugin: 'com.google.gms.google-services'
